--- a/Fitness Site/Html/Contact.html
+++ b/Fitness Site/Html/Contact.html
@@ -4,35 +4,33 @@
 <style type="text/css">
 </style>
 <link href="../Css/Contact.css" rel="stylesheet" type="text/css">
-	
+<link href="../Css/header.css" rel="stylesheet" type="text/css">
 <nav class="header">
   <a href="#default" class="logo">Gym Finder</a>
   <div class="header-right">
-    <a class="active" href="#home">Home</a>
+    <a href="Gym Finder.html" class="Home">Home</a>
    <a href="Contact.html" class="Contact">Contact</a>
-    <a href="#about" class="About">About</a>
-    <a href="#Submit" class="Review">Submit Review</a>
+    <a href="Health.html" class="Health">Health</a>
+    <a href="" class="Review">Find a gym</a>
 	
-	<body>
-
-		<div class="contact-title">
-			<h1>Contact Form</h1>
-		</div>
+	<body class="header">
 
 		<div class="contact-form">
 			<form id="contact-form" method="post" action="">
+				<div class="contact-title">
+			<h1>Contact Form</h1>
+		</div>
 				<input name="name" type="text" class="form-control" placeholder="First Name" required>
 				<br>
 					<input name="name" type="text" class="form-control" placeholder="Last Name" 
 					required></textarea><br>
 			<section>
 				<textarea placeholder="MESSAGE" name="message" tabindex="5" rows="10" class="redacted"></textarea>
-  </div>
-			
-		</section>
-					<input type="Submit" class="form-control submit" vaule="Send Message">
-				 <link rel="stylesheet" href="Contact.css">
 				
+						<input type="Submit" class="form-control submit" vaule="Send Message">
+				 <link rel="stylesheet" href="Contact.css">
+  </div>
+			</section>
 		  </form>
 </body>
 	  <footer id="footer">
