--- a/Fitness Site/Html/Gym Finder.html
+++ b/Fitness Site/Html/Gym Finder.html
@@ -4,27 +4,29 @@
 <link rel="webfontkit/" href="fonts.css" type="text/css" charset="utf-8"/>
 <link href="https://fonts.googleapis.com/css?family=Anton|Lobster" rel="stylesheet">
 <link href="../Css/header.css" rel="stylesheet" type="text/css">
+<link rel="stylesheet" href="../Css/search_bar.css"  type="text/css">
 <body>
 
 <nav class="header">
-  <a href="#default" class="logo">Gym Finder</a>
+  <a href="Home.html" class="logo">Gym Finder</a>
   <div class="header-right">
     <a class="active" href="#home">Home</a>
    <a href="Contact.html" class="Contact">Contact</a>
-    <a href="#health" class="Health">Health</a>
-    <a href="#Submit" class="Review">Submit Review</a>
+    <a href="Health.html" class="Health">Health</a>
+    <a href="#Submit" class="Review">Find a location</a>
       <link rel="stylesheet" href="header.css">
 	
 <div class="wrap">
    <div class="search">
       <input type="text" class="searchTerm" placeholder="Find a gym in your city!">
-      <button type="submit" class="searchButton">
+      <button type="submit" class="searchButton" onclick="window.location.href='Gyms.html'">
         <i class="fa fa-search"></i>
-		 <link href="../search_bar.css" rel="stylesheet" type="text/css">
+		 
+		  
      </button>
 	   
-   </div>
+  </div>
 </div>
 	 
-	  </body>
+</body>
 </html>
