--- a/Fitness Site/Html/Gyms.html
+++ b/Fitness Site/Html/Gyms.html
@@ -12,8 +12,8 @@
   <div class="header-right">
     <a class="active" href="#home">Home</a>
    <a href="Contact.html" class="Contact">Contact</a>
-    <a href="#health" class="Health">Health</a>
-    <a href="#Submit" class="Review">Submit Review</a>
+    <a href="Health.html" class="Health">Health</a>
+    <a href="Gyms.html" class="Review">Find a gym</a>
       <link rel="stylesheet" href="header.css">
 	</div>
 	  </nav>
@@ -36,6 +36,7 @@
       }
     </style>
   </head>
+
   <body>
     <div id="map"></div>
     <script>
